@@ -1,5 +1,8 @@
 {% extends "!layout.html" %}
 {% block extrahead %}
+{# html_context variable from conf.py #}
 <meta name="hc" content="{{ hckey }}" />
+{# html_context variable from confoverrides (as if given on cmdline) #}
+<meta name="hc_co" content="{{ hckey_co }}" />
 {{ super() }}
 {% endblock %}
