@@ -1,6 +1,9 @@
 Release 0.6.4 (in development)
 ==============================
 
+* #303: ``html_context`` values given on the command line via ``-A``
+  should not override other values given in conf.py.
+
 * Fix a bug preventing incremental rebuilds for the ``dirhtml``
   builder.
 
